comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <head>
             <h1>Titulo do Site</h1>
             <article>
-                <h2>Artigo 001</h2>
-                <p>001</p>
+                <h2>Curso de HTML 5</h2>
+                <p><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur atque obcaecati voluptate molestiae quos exercitationem veniam commodi omnis quibusdam vitae odit nisi aliquam laudantium hic officia numquam sint, ducimus architecto!</p></p>
             </article>
             <article>
-                <p>Artigo 002</p>
-                <p>002</p>
+                <h1>Curso de JS</h1>
+                <p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aliquam hic at. Fuga natus reiciendis tempora cupiditate sit sint fugit, obcaecati quaerat quae vel, itaque iusto maxime tenetur eos minima.</p></p>
             </article>
         </head>
     </main>
